--- a/config/locales/devise.es.yml
+++ b/config/locales/devise.es.yml
@@ -39,11 +39,11 @@ es:
       signed_up_but_locked: "Se ha registrado correctamente, pero no ha podido iniciar sesión porque su cuenta está bloqueada."
       signed_up_but_unconfirmed: "Se le ha enviado un mensaje con un enlace de confirmación. Por favor visite el enlace para activar su cuenta."
       update_needs_confirmation: "Ha actualizado su cuenta correctamente, sin embargo necesitamos verificar su nueva cuenta de correo. Por favor revise su correo electrónico y visite el enlace para finalizar la confirmación de su nueva dirección de correo electrónico."
-      updated: "Ha actualizado tu cuenta correctamente."
+      updated: "Ha actualizado su cuenta correctamente."
     sessions:
-      signed_in: "Ha iniciado sesión correctamente."
-      signed_out: "Ha cerrado la sesión correctamente."
-      already_signed_out: "Ha cerrado la sesión correctamente."
+      signed_in: "¡Bienvenido! Ha iniciado sesión correctamente."
+      signed_out: "Ha cerrado sesión correctamente."
+      already_signed_out: "Ha cerrado sesión correctamente."
     unlocks:
       send_instructions: "Recibirá un correo electrónico en unos minutos con instrucciones sobre cómo desbloquear su cuenta."
       send_paranoid_instructions: "Si su cuenta existe, recibirá un correo electrónico en unos minutos con instrucciones sobre cómo desbloquear su cuenta."
