Experiencia modificada, se requiere migrar

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -1,5 +1,71 @@
 ---
 es:
+  activerecord:
+      attributes:
+        area:
+          name: "Nombre"
+          description: "Descripción"
+        bulletin:
+          title: "Título"
+          description: "Descripción"
+          start_date: "Fecha"
+        comment:
+          body: "Contenido"
+        comment_offering:
+          body: "Contenido"
+        comment_request:
+          body: "Contenido"
+        contact:
+          name: "Nombre"
+          email: "Correo electrónico"
+          body: "Contenido"
+        event:
+          title: "Título"
+          description: "Descripción"
+          address: "Dirección"
+          start_time: "Fecha de inicio"
+          end_time: "Fecha de término"
+        experience:
+          title: "Título"
+        identity:
+        institution:
+          name: "Nombre"
+          web: "Página web"
+        interest_link:
+          name: "Nombre"
+          url: "link o página"
+          description: "Descripción"
+        minute:
+          name: "Nombre"
+          date: "Fecha"
+        offering:
+          title: "Título"
+          description: "Descripción"
+          status: "Estado"
+          start_time: "Fecha de inicio"
+          end_time: "Fecha de término"
+          resume: "Resumen"
+        request:
+          title: "Título"
+          description: "Descripción"
+          status: "Estado"
+          start_time: "Fecha de inicio"
+          end_time: "Fecha de término"
+          resume: "Resumen"
+        section:
+          title: "Título"
+          description: "Descripción"
+          module: "Módulo"
+        user:
+          email: "Correo electrónico"
+          name: "Nombre"
+          nickname: "Nickname o apodo"
+          password: "Contraseña"
+          category: "Tipo de usuario"
+          autorization_level: "Rol de usuario"
+          current_password: "Contraseña actual" 
+
+
   date:
     abbr_day_names:
     - dom
