--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -35,7 +35,7 @@ es:
           name: "Nombre"
           url: "link o página"
           description: "Descripción"
-        minute:
+        resource:
           name: "Nombre"
           date: "Fecha"
         offering:
@@ -133,8 +133,8 @@ es:
       almost_x_years:
         one: casi 1 año
         other: casi %{count} años
-      half_a_minute: medio minuto
-      less_than_x_minutes:
+      half_a_resource: medio minuto
+      less_than_x_resources:
         one: menos de 1 minuto
         other: menos de %{count} minutos
       less_than_x_seconds:
@@ -146,7 +146,7 @@ es:
       x_days:
         one: 1 día
         other: "%{count} días"
-      x_minutes:
+      x_resources:
         one: 1 minuto
         other: "%{count} minutos"
       x_months:
@@ -158,7 +158,7 @@ es:
     prompts:
       day: Día
       hour: Hora
-      minute: Minutos
+      resource: Minutos
       month: Mes
       second: Segundos
       year: Año
